# mymasterproject

./: CMakeLists.txt  LICENSE  LIED20.iid  README.md  mymasterproject.cpp  runrunrun.sh  server_example_goose.cpp  shared_parameters.cpp  start_IED_macvlan.bash  static_model.c  static_model.h
backupfiles/example/: static_model.c
projectrelated/: 1.pcap  2.pcap  protection2.pcap
